--- a/serverless/services/resumes.yml
+++ b/serverless/services/resumes.yml
@@ -1,3 +1,15 @@
+resumeGET:
+    handler: src/infra/resumes.resumeGET
+    events:
+        - http:
+              path: /resumes/{username}
+              method: get
+              cors: true
+              request:
+                  parameters:
+                      paths:
+                          username: true
+
 resumeLangGET:
     handler: src/infra/resumes.resumeLangGET
     events:
