--- a/serverless/resources/ddb.yml
+++ b/serverless/resources/ddb.yml
@@ -29,4 +29,4 @@ Resources:
             ProvisionedThroughput:
                 ReadCapacityUnits: 5
                 WriteCapacityUnits: 5
-            TableName: ${env:DDB_TABLE_NAME}-${self:provider.stage}
+            TableName: ${env:DDB_TABLE_NAME}-${env:STAGE}
