--- a/serverless.yml
+++ b/serverless.yml
@@ -44,6 +44,13 @@ custom:
         createRoute53Record: true
         enabled: ${self:custom.domainEnabled.${env:STAGE}, self:custom.domainEnabled.other}
 
+package:
+    exclude:
+        - '**'
+        - '!node_modules/**'
+        - '!src/**'
+        - src/**/*.test.js
+
 functions:
     - ${file(serverless/services/resumesLanguages.yml)}
     - ${file(serverless/services/resumes.yml)}
